// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon ArrowUp renders correctly 1`] = `
<svg
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M13 7.828V20h-2V7.828l-5.364 5.364-1.414-1.414L12 4l7.778 7.778-1.414 1.414L13 7.828z"
  />
</svg>
`;

exports[`Icon Information renders correctly 1`] = `
<svg
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16zM11 7h2v2h-2V7zm0 4h2v6h-2v-6z"
  />
</svg>
`;

exports[`Icon Moon renders correctly 1`] = `
<svg
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M10 7a7 7 0 0012 4.9v.1c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2h.1A6.979 6.979 0 0010 7zm-6 5a8 8 0 0015.062 3.762A9 9 0 018.238 4.938 7.999 7.999 0 004 12z"
  />
</svg>
`;

exports[`Icon Sun renders correctly 1`] = `
<svg
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M12 18a6 6 0 110-12 6 6 0 010 12zm0-2a4 4 0 100-8 4 4 0 000 8zM11 1h2v3h-2V1zm0 19h2v3h-2v-3zM3.515 4.929l1.414-1.414L7.05 5.636 5.636 7.05 3.515 4.93zM16.95 18.364l1.414-1.414 2.121 2.121-1.414 1.414-2.121-2.121zm2.121-14.85l1.414 1.415-2.121 2.121-1.414-1.414 2.121-2.121zM5.636 16.95l1.414 1.414-2.121 2.121-1.414-1.414 2.121-2.121zM23 11v2h-3v-2h3zM4 11v2H1v-2h3z"
  />
</svg>
`;
